app/css/app.css
@import 'directives/add-subtract-multiply.css';
@import 'directives/general.css';
@import 'directives/ms-button.css';
@import 'directives/ms-cancel-fracs.css';
@import 'directives/ms-chart.css';
@import 'directives/ms-div-wholes.css';
@import 'directives/ms-equiv.css';
@import 'directives/ms-exponent.css';
@import 'directives/ms-fraction.css';
@import 'directives/ms-find-lcm.css';
@import 'directives/ms-find-gcf.css';
@import 'directives/ms-group.css';
@import 'directives/ms-input.css';
@import 'directives/ms-image.css';
@import 'directives/ms-order-operations.css';
@import 'directives/ms-order-operations-simple.css';
@import 'directives/ms-placevalue.css';
@import 'directives/ms-percent.css';
@import 'directives/ms-select.css';
@import 'directives/ms-sign.css';
@import 'directives/mean-median-mode_4-1.css';
@import 'directives/ms-prime-factorization.css';
@import 'directives/ms-problem-pager.css';
@import 'directives/ms-breadcrumbs.css';



/* app css stylesheet */

/* Bootstrap Overrides */

.control-group.error .checkbox,
.control-group.error .radio,
.control-group.error input,
.control-group.error select,
.control-group.error textarea,
.control-group.success .checkbox,
.control-group.success .radio,
.control-group.success input,
.control-group.success select,
.control-group.success textarea {
    color: black;
}

/* Bootstrap Override set workbook nav-tabs width */
.tabs-left>.nav-tabs>li>a,.tabs-right>.nav-tabs>li>a{
    min-width: 62px;
}

/* Give error inputs a red background */
.control-group.error .checkbox,
.control-group.error .radio,
.control-group.error input,
.control-group.error select,
.control-group.error textarea {
    background: rgb(185, 74, 72);
}

.modalUpperRight{
	top: 20%;
    left: 74%; 
}
.modalMiddleLeft {
    top: 50%;
	left:20%;
}
.ms-order-ops-simple button.btn.btn- {
	font-size:100%;
}

/* Animations */

/* fadeIn */
ms-panel > div {
    -ms-animation: fadein 1s;
    -moz-animation: fadein 1s;
    -o-animation: fadein 1s;
    -webkit-animation: fadein 1s;
    animation: fadein 1s;
}

ms-panel .helpPanel > div {
    -ms-animation: fadein 1s;
    -moz-animation: fadein 1s;
    -o-animation: fadein 1s;
    -webkit-animation: fadein 1s;
    animation: fadein 1s;
}

ms-panel > div {
    padding-top: 10;
}

@-webkit-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@-moz-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@-o-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

/* Original Animations prior 23Oct13 commented out below- includes slideup discontinued per Matt*/

/* fadeIn */
/*ms-panel > div {
    -ms-animation: fadein 1s, slideup 0.25s ease-in;
    -moz-animation: fadein 1s, slideup 0.25s ease-in;
    -o-animation: fadein 1s, slideup 0.25s ease-in;
    -webkit-animation: fadein 1s, slideup 0.25s ease-in;
    animation: fadein 1s, slideup 0.25s ease-in;
}

ms-panel .helpPanel > div {
    -ms-animation: fadein 1s, slideup 0.25s ease-in;
    -moz-animation: fadein 1s, slideup 0.25s ease-in;
    -o-animation: fadein 1s, slideup 0.25s ease-in;
    -webkit-animation: fadein 1s, slideup 0.25s ease-in;
    animation: fadein 1s, slideup 0.25s ease-in;
}

ms-panel > div {
    padding-top: 10;
}

@-webkit-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@-moz-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@-o-keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}

@keyframes fadein {
    from {
        opacity: 0.0;
    }

    to {
        opacity: 1.0;
    }
}*/

/* bounce */

/*@-webkit-keyframes slideup {
    from {
        margin-top: 10px;
    }

    to {
        margin-top: inherit;
    }
}

@-moz-keyframes slideup {
    from {
        margin-top: 10px;
    }

    to {
        margin-top: inherit;
    }
}

@-o-keyframes slideup {
    from {
        margin-top: 10px;
    }

    to {
        margin-top: inherit;
    }
}

@keyframes slideup {
    from {
        margin-top: 10px;
    }

    to {
        margin-top: inherit;
    }
}*/

/* Original Animations prior 23Oct13 commented out above- includes slideup discontinued per Matt*/

